actualizacion de archivos

--- a/index.html
+++ b/index.html
@@ -1,13 +1,103 @@
 <!DOCTYPE html>
 <html>
 
-<head>
-  <head>
-    <link href="css/normalize.css" rel="styles">
-    <link href="css/styles.css" rel="styles">
-    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="styles">
-    <meta charset="utf-8">
-    <title> Mi pagina web</title>
-  </head>
+<!-- META Y VARIOS -->
 
-  </html> 
+<head>
+    <link href="css/normalize.css" rel="stylesheet">
+    <link href="css/styles.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+    <meta charset="utf-8">
+
+<!-- TITULO DE LA WEB -->
+    <title> Mi pagina web</title>
+
+  </head>
+<body>
+
+<header id="header">
+<div class="wrapper">
+  <div class="menu">
+  </div>
+
+<div class="header-content">
+<div class="header-content-inner">
+  <h1>New Age is an app landing page that will help you beautifully showcase your new mobile app, or anything else!<h1>
+</div>
+
+<div class="cellphone">
+
+            <img src="telefono.png" class="image-responsive">
+</div>
+
+</header>
+
+  <body background="fondo.png">
+
+<section id="section">
+  <div class="section-content">
+    <h2>Discover what all the buzz is about!<h2>
+      <p>Our app is available on any mobile device! Download now to get started! </p>
+</div>
+</section>
+
+<section id="features">
+  <div class="section-features">
+    <h3>Unlimited Features, Unlimited Fun</h3>
+    <div class "text">
+      <p>Check out what you can do with this app theme!</p>
+</div>
+  </div>
+</section>
+
+<section class="cta">
+        <div class="cta-content">
+            <div class="container">
+                <h2>Stop waiting.<br>Start building.</h2>
+                <a href="#contact" class="btn btn-outline btn-xl page-scroll">Let's Get Started!</a>
+            </div>
+        </div>
+        <div class="overlay"></div>
+</section>
+
+<section class"contact">
+  <div class="section-contact">
+    <h2>We new friends!</h2>
+  </div>
+  <ul class="list-inline list-social">
+              <li class="social-twitter">
+                  <a href="#"><i class="fa fa-twitter"></i></a>
+              </li>
+              <li class="social-facebook">
+                  <a href="#"><i class="fa fa-facebook"></i></a>
+              </li>
+              <li class="social-google-plus">
+                  <a href="#"><i class="fa fa-google-plus"></i></a>
+              </li>
+          </ul>
+</section>
+
+<footer>
+      <div class="container">
+          <p>&copy; 2016 Start Bootstrap. All Rights Reserved.</p>
+          <ul class="list-inline">
+              <li>
+                  <a href="#">Privacy</a>
+              </li>
+              <li>
+                  <a href="#">Terms</a>
+              </li>
+              <li>
+                  <a href="#">FAQ</a>
+              </li>
+          </ul>
+      </div>
+  </footer>
+
+
+
+
+
+
+</body>
+</html>
