--- a/index.html
+++ b/index.html
@@ -50,14 +50,16 @@
   </div>
 </section>
 
-<section class="cta">
-        <div class="cta-content">
-            <div class="container">
-                <h2>Stop waiting.<br>Start building.</h2>
-                <a href="#contact" class="btn btn-outline btn-xl page-scroll">Let's Get Started!</a>
-            </div>
-        </div>
-        <div class="overlay"></div>
+<section id="background-image">
+			<div id="start-building" class="start-building">
+				<div class="container">
+					<h2>Stop waiting.<br>Start building.</h2>
+					<a href="#" class="btn btn-started">Let's Get Started!</a>
+				</div>
+			</div>
+		</section>
+
+
 </section>
 
 <section class"contact">
